--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for user, url: admin_user_path,  html: { class: "dark-form" } do |form| %>
+<%= simple_form_for user, url:,  html: { class: "dark-form" } do |form| %>
   <% if user.errors.any? %>
     <div id="error_explanation" class="bg-red-50 text-red-500 px-4 py-3 font-medium rounded-lg">
       <h2 class="text-lg font-semibold"><%= pluralize(user.errors.count, "error") %> prevented this user from being saved:</h2>
@@ -15,7 +15,7 @@
   <div class="pt-4 items-center justify-center"  data-controller="user-controller">
     <div >
       <div class="w-40 h-40 rounded overflow-hidden" data-image-preview-target="preview">
-      <% if user.avatar.attached? %>
+      <% if user.avatar.attached? && user.persisted? %>
         <%= image_tag user.avatar.variant(:thumb), class: "w-full h-full object-cover" %>
       <% else %>
        <%= image_tag asset_path("avatar.png") %>
@@ -51,8 +51,7 @@
         collection: User.roles.keys.map { |k| [k.humanize, k] },
         label_html: { class: "text-white" },
         input_html: { class: "block w-full" },
-        include_blank: "Select a role",
-        selected: form.object.role %>
+        selected: user.role %>
     </div>
 
     <div class="">
