--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
   <body
   class="bg-[#1E1E1E] h-screen w-screen overflow-hidden <%= content_for?(:body_class) ? yield(:body_class) : "#{controller_name} #{action_name}" %>">
     <div id="flash"> <%= render "shared/flash" %></div>
-    <main class="w-screen h-screen" data-controler="image-preview">
+    <main class="w-screen h-screen">
       <div class="flex w-full h-full ">
         <%= yield %>
       </div>
