--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -13,7 +13,7 @@
           </span>
         <% end %>
       </div>
-      <%= render "form", user: @user, url: admin_users_path %>
+      <%= render "form", user: @user, url: admin_users_path, turbo: @turbo %>
     </div>
   <% end %>
 </div>
