--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,7 +1,5 @@
 <% content_for :body_class, "" %>
-<% content_for :title, "Menu" %>
-<%= turbo_stream_from 'categories' %>
-<%= turbo_stream_from 'products' %>
+<% content_for :title, @user.full_name %>
 <div class="sidebar-left bg-[#292C2D] w-3/12 lg:w-2/12 h-full rounded-tr-3xl rounded-br-3xl py-6 justify-center">
   <%= render('shared/sidebar_left') %>
 </div>
@@ -34,15 +32,18 @@
               text: 'Edit Profile',
               data: { turbo_frame: 'edit_user' },
               classes: 'bg-bg-tertiary px-4 py-4 transition duration-300 hover:bg-transparent hover:border hover:border-border-tertiary w-full text-gray-900 hover:text-text-tertiary rounded my-4',
-              href: edit_admin_user_path(@user)
+              href: edit_admin_user_path(@user, turbo: false)
               )
           ) %>
 
           <%= button_to 'Delete User',
           admin_user_path(@user),
             class: 'bg-none border border-border-tertiary text-text-tertiary px-4 py-4 transition duration-300 hover:bg-bg-tertiary w-full text-gray-900 hover:text-white rounded my-4',
-            data: { method: :delete, turbo_confirm: 'This will be lost forever, like forever! Are you sure?'}
+            method: :delete,
+            data: { turbo_confirm: 'This will be lost forever, like forever! Are you sure?'}
             %>
+
+
 
         </div>
       </div>
