--- a/app/components/profile_bar_component.html.erb
+++ b/app/components/profile_bar_component.html.erb
@@ -28,7 +28,7 @@
     <!--profile management-->
     <div>
 
-    <%= link_to admin_user_path(current_user) do %>
+    <%= link_to user_profile_path(current_user) do %>
     <div class="w-10 h-10 rounded-full overflow-hidden items-center border border-border-tertiary border-2">
       <% if @current_user.avatar.attached? %>
         <%= image_tag @current_user.avatar.variant(:icon) %>
