--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -6,8 +6,16 @@
   <%= render('shared/sidebar_left') %>
 </div>
 <div class="main-section w-9/12 lg:w-10/12 pl-4 h-screen overflow-y-scroll custom-bar ">
+  <div class="pr-8">
+    <%= render(ProfileBarComponent.new(
+      heading_content: "Staff Management",
+      current_user: ,
+      return_path: root_path(current_user)
+    )) %>
+  </div>
+
   <div class=" w-full justify-between inline-flex items-center" style="height: 10vh">
-    <h1 class="text-2xl font-semibold text-white my-2">Staff (<%= @users.count %>)</h1>
+    <h1 class="text-xl font-semibold text-white my-2">You can manage <%= @users.count %> staff</h1>
     <%= render(ButtonComponent.new(
       text: 'Add Staff',
       classes: 'bg-bg-tertiary px-4 py-2 hover:bg-bg-secondary max-w-40 text-gray-900 hover:text-white',
