--- a/app/views/home/menu.html.erb
+++ b/app/views/home/menu.html.erb
@@ -17,7 +17,7 @@
   <div class=" w-full justify-between inline-flex items-center" style="height: 10vh">
     <h1 class="text-xl font-semibold text-white my-2">Categories</h1>
     <%= render(ButtonComponent.new(
-      text: 'Add New Category',
+      text: 'New Category',
       classes: 'bg-bg-tertiary px-4 py-2 hover:bg-bg-secondary max-w-60 text-gray-900 hover:text-white',
       href: new_category_path,
       data: { turbo_frame: 'new_category'}
