--- a/app/views/products/_index.html.erb
+++ b/app/views/products/_index.html.erb
@@ -19,7 +19,7 @@
     </div>
     <div class="w-4/12 justify-end flex">
       <%= render(ButtonComponent.new(
-      text: 'Add New Product',
+      text: 'New Product',
       classes: 'bg-bg-tertiary px-4 py-2 hover:bg-bg-secondary max-w-60 text-gray-900 hover:text-white',
       href: new_product_path,
       data: { turbo_frame: 'new_product'}
