--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,7 +1,13 @@
 <tr class="hover:bg-[#565E60] <%= product.id.even? ? 'bg-bg-secondary': 'bg-bg-primary' %>" id="<%= dom_id product %>">
   <!--<td class="px-4 py-2 text-center justify-center"><input type="checkbox" value="<%#= product.id %>"></td>-->
   <td class="px-4 py-2 text-center justify-center">
-    <img src="<%= product.image.url %>" alt="<%= product.name %>" class="w-16 h-16 object-cover mt-2">
+    <div class="w-10 h-10 rounded-full overflow-hidden items-center">
+      <% if product.image.attached? %>
+          <%= image_tag product.image.variant(:icon) %>
+      <% else %>
+        <%= image_tag asset_path("avatar.png") %>
+      <% end %>
+    </div>
   </td>
   <td class="px-4 py-2 text-center justify-center"><%= product.name %></td>
   <td class="px-4 py-2 text-center justify-center min-w-10"><%= product.id %></td>
