--- a/app/views/home/menu.html.erb
+++ b/app/views/home/menu.html.erb
@@ -6,10 +6,18 @@
   <%= render('shared/sidebar_left') %>
 </div>
 <div class="main-section w-9/12 lg:w-10/12 pl-4 h-screen overflow-y-scroll custom-bar " data-controller="tabs">
+  <div class="pr-8">
+    <%= render(ProfileBarComponent.new(
+      heading_content: "Menu",
+      current_user: ,
+      return_path: root_path(current_user)
+    )) %>
+  </div>
+
   <div class=" w-full justify-between inline-flex items-center" style="height: 10vh">
-    <h1 class="text-2xl font-semibold text-white my-2">Categories</h1>
+    <h1 class="text-xl font-semibold text-white my-2">Categories</h1>
     <%= render(ButtonComponent.new(
-      text: 'Add New Category',
+      text: 'New Category',
       classes: 'bg-bg-tertiary px-4 py-2 hover:bg-bg-secondary max-w-60 text-gray-900 hover:text-white',
       href: new_category_path,
       data: { turbo_frame: 'new_category'}
