--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,9 +1,9 @@
 <% content_for :title, "New Product" %>
 <div class="md:w-2/3 w-full">
   <%= turbo_frame_tag 'new_product' do %>
-    <div class="h-screen bg-bg-secondary rounded-tl-3xl rounded-bl-3xl fixed top-0 right-0 w-5/12 xl:w-3/12 px-8 py-12 justify-center text-white overflow-y-auto custom-bar">
+    <div class="h-screen bg-bg-secondary rounded-tl-3xl rounded-bl-3xl fixed top-0 right-0 w-full md:w-8/12 xl:w-4/12 px-8 py-12 justify-center text-white overflow-y-auto custom-bar">
       <div class="flex justify-between border-b border-bg-ternary py-3">
-        <h1 class="font-bold text-2xl">Add New Product</h1>
+        <h1 class="font-bold text-2xl">New Product</h1>
         <%= link_to products_path do %>
           <span class="cursor-pointer close">
             <svg width="36" height="36" viewBox="0 0 36 36" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -16,5 +16,4 @@
       <%= render "form", product: @product %>
     </div>
   <% end %>
-  <%= link_to "Back to Products", products_path, class: "ml-2 rounded-md px-3.5 py-2.5 bg-gray-100 hover:bg-gray-50 inline-block font-medium" %>
 </div>
