--- a/app/views/shared/_sidebar_left.html.erb
+++ b/app/views/shared/_sidebar_left.html.erb
@@ -1,10 +1,10 @@
-<div class="px-4 lg:px-0 ">
+<div class="px-4 lg:px-0 relative h-full">
 <h2 class="text-text-tertiary font-bold py-6 lg:w-10/12 m-auto text-3xl">FOX POS</h2>
-<div class="w-full lg:w-11/12 m-auto">
+<div class="w-full lg:w-11/12 m-auto h-full">
   <div class="my-8 <%= active_class('home', '') %>">
     <%= render(ButtonComponent.new(
       text: 'Dashboard',
-      classes: 'text-white hidden',
+      classes: 'text-white hidden duration-200',
       data: {turbo_frame: "_top"},
       href: '/home',
       svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -38,23 +38,29 @@
         )
     ) %>
   </div>
-  <div class="my-8  <%= active_class('staff', 'index') %>">
-    <%= render(ButtonComponent.new(
-      text: 'Staff',
-      classes: 'text-white hidden',
-      data: {turbo_frame: "_top"},
-      href: '/home/menu',
-      svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="14.8591" cy="14.8591" r="14.8591" fill="white"/>
-              <path d="M13 21C13 21 12 21 12 20C12 19 13 16 17 16C21 16 22 19 22 20C22 21 21 21 21 21H13ZM17 15C17.7956 15 18.5587 14.6839 19.1213 14.1213C19.6839 13.5587 20 12.7956 20 12C20 11.2044 19.6839 10.4413 19.1213 9.87868C18.5587 9.31607 17.7956 9 17 9C16.2044 9 15.4413 9.31607 14.8787 9.87868C14.3161 10.4413 14 11.2044 14 12C14 12.7956 14.3161 13.5587 14.8787 14.1213C15.4413 14.6839 16.2044 15 17 15ZM11.216 21C11.0678 20.6878 10.9939 20.3455 11 20C11 18.645 11.68 17.25 12.936 16.28C12.3092 16.0864 11.656 15.992 11 16C7 16 6 19 6 20C6 21 7 21 7 21H11.216ZM10.5 15C11.163 15 11.7989 14.7366 12.2678 14.2678C12.7366 13.7989 13 13.163 13 12.5C13 11.837 12.7366 11.2011 12.2678 10.7322C11.7989 10.2634 11.163 10 10.5 10C9.83696 10 9.20107 10.2634 8.73223 10.7322C8.26339 11.2011 8 11.837 8 12.5C8 13.163 8.26339 13.7989 8.73223 14.2678C9.20107 14.7366 9.83696 15 10.5 15Z" fill="#FAC1D9"/>
-            </svg>
-            ')
-      ) %>
-  </div>
+
+
+  <% if current_user.management? %>
+      <div class="my-8  <%= active_class('staff', 'index') %>">
+      <%= render(ButtonComponent.new(
+        text: 'Staff',
+        classes: 'text-white duration-200',
+        data: {turbo_frame: "_top"},
+        href: admin_users_path,
+        svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="14.8591" cy="14.8591" r="14.8591" fill="white"/>
+                <path d="M13 21C13 21 12 21 12 20C12 19 13 16 17 16C21 16 22 19 22 20C22 21 21 21 21 21H13ZM17 15C17.7956 15 18.5587 14.6839 19.1213 14.1213C19.6839 13.5587 20 12.7956 20 12C20 11.2044 19.6839 10.4413 19.1213 9.87868C18.5587 9.31607 17.7956 9 17 9C16.2044 9 15.4413 9.31607 14.8787 9.87868C14.3161 10.4413 14 11.2044 14 12C14 12.7956 14.3161 13.5587 14.8787 14.1213C15.4413 14.6839 16.2044 15 17 15ZM11.216 21C11.0678 20.6878 10.9939 20.3455 11 20C11 18.645 11.68 17.25 12.936 16.28C12.3092 16.0864 11.656 15.992 11 16C7 16 6 19 6 20C6 21 7 21 7 21H11.216ZM10.5 15C11.163 15 11.7989 14.7366 12.2678 14.2678C12.7366 13.7989 13 13.163 13 12.5C13 11.837 12.7366 11.2011 12.2678 10.7322C11.7989 10.2634 11.163 10 10.5 10C9.83696 10 9.20107 10.2634 8.73223 10.7322C8.26339 11.2011 8 11.837 8 12.5C8 13.163 8.26339 13.7989 8.73223 14.2678C9.20107 14.7366 9.83696 15 10.5 15Z" fill="#FAC1D9"/>
+              </svg>
+              ')
+        ) %>
+    </div>
+  <% end %>
+
+
   <div class="my-8  <%= active_class('inventory', 'index') %>">
     <%= render(ButtonComponent.new(
       text: 'Inventory',
-      classes: 'text-white hidden',
+      classes: 'text-white hidden duration-200',
       data: {turbo_frame: "_top"},
       href: '/home/menu',
       svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -70,7 +76,7 @@
   <div class="my-8  <%= active_class('reports', 'index') %>">
     <%= render(ButtonComponent.new(
       text: 'Reports',
-      classes: 'text-white hidden',
+      classes: 'text-white hidden duration-200',
       data: {turbo_frame: "_top"},
       href: '/home/menu',
       svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -85,7 +91,7 @@
   <div class="my-8  <%= active_class('orders', 'index') %>">
     <%= render(ButtonComponent.new(
       text: 'Orders                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                               ',
-      classes: 'text-white hi',
+      classes: 'text-white duration-200',
       data: {turbo_frame: "_top"},
       href: orders_path,
       svg: '<svg width="30" height="30" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -106,6 +112,18 @@
           ')
       ) %>
   </div>
+
+
 </div>
 
+ <div class="text-white absolute flex bottom-0 text-center w-full items-center justify-center">
+  <div class="flex items-center justify-center px-4 rounded-lg hover:bg-bg-ternary duration-200">
+    <%= button_to destroy_user_session_path, class: "cursor-pointer p-2",  method: :delete do %>
+      <svg class="mx-auto" width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path d="M20.3443 17.1563H18.6966C18.5841 17.1563 18.4786 17.2055 18.4083 17.2922C18.2443 17.4914 18.0685 17.6836 17.8833 17.8664C17.1261 18.6245 16.229 19.2286 15.2419 19.6453C14.2192 20.0773 13.1201 20.2989 12.0099 20.2969C10.8872 20.2969 9.79974 20.0766 8.77787 19.6453C7.79074 19.2286 6.89374 18.6245 6.13646 17.8664C5.37782 17.111 4.77291 16.2155 4.35521 15.2297C3.92162 14.2078 3.70365 13.1227 3.70365 12C3.70365 10.8774 3.92396 9.79222 4.35521 8.77035C4.7724 7.78363 5.3724 6.89535 6.13646 6.13363C6.90052 5.37191 7.7888 4.77191 8.77787 4.35472C9.79974 3.92347 10.8872 3.70316 12.0099 3.70316C13.1326 3.70316 14.2201 3.92113 15.2419 4.35472C16.231 4.77191 17.1193 5.37191 17.8833 6.13363C18.0685 6.31879 18.2419 6.51097 18.4083 6.70785C18.4786 6.79457 18.5865 6.84379 18.6966 6.84379H20.3443C20.4919 6.84379 20.5833 6.67972 20.5013 6.5555C18.7036 3.76175 15.5583 1.91254 11.9841 1.92191C6.36849 1.93597 1.86615 6.49457 1.9224 12.1032C1.97865 17.6227 6.47396 22.0782 12.0099 22.0782C15.5747 22.0782 18.706 20.2313 20.5013 17.4446C20.581 17.3203 20.4919 17.1563 20.3443 17.1563ZM22.4279 11.8524L19.1021 9.22738C18.9779 9.12894 18.7974 9.21801 18.7974 9.37504V11.1563H11.438C11.3349 11.1563 11.2505 11.2407 11.2505 11.3438V12.6563C11.2505 12.7594 11.3349 12.8438 11.438 12.8438H18.7974V14.625C18.7974 14.7821 18.9802 14.8711 19.1021 14.7727L22.4279 12.1477C22.4503 12.1302 22.4684 12.1077 22.4809 12.0822C22.4933 12.0566 22.4998 12.0285 22.4998 12C22.4998 11.9716 22.4933 11.9435 22.4809 11.9179C22.4684 11.8923 22.4503 11.8699 22.4279 11.8524Z" fill="#FAC1D9"/>
+      </svg>
+      <span class="mx-auto">Logout</span>
+    <% end %>
+    </div>
+  </div>
 </div>
