Assign orders to users

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -5,7 +5,7 @@
 <div class="main-section w-10/12 py-4 px-4 block text-text-primary h-screen" data-controller="tabs">
     <div class="pr-8">
     <%= render(ProfileBarComponent.new(
-      heading_content: "Orders",
+      heading_content: "My Orders",
       current_user: ,
       return_path: root_path(current_user)
     )) %>
