--- a/app/views/orders/_option.html.erb
+++ b/app/views/orders/_option.html.erb
@@ -1,9 +1,9 @@
 <!--# displays the products on order edit page below each category-->
-<%= turbo_frame_tag dom_id(product), class:"item-link flex my-4" do %>
+<%= turbo_frame_tag dom_id(product), class:"item-link flex my-4 mx-2" do %>
   <div class="item-thumbnail
   order-item-thumbnail
   rounded-lg min-w-48 h-48 text-normal text-white duration-200 bg-bg-secondary">
-    <div class="thumbnail-content p-3">
+    <div class="thumbnail-content mx-2">
       <!-- Image in top-right corner -->
       <div class="size bg-bg-tertiary px-2 text-space-900 absolute left-3 top-3 rounded-lg"> <%= product.size %> </div>
       <div class="image-container absolute">
